# tianbot_mini_description

./: CMakeLists.txt  README.md  package.xml
launch/: display.launch  gazebo.launch  model.launch.xml
urdf/: tianbot_mini.urdf.xacro  tianbot_mini_run.urdf.xacro
